commit al mastes del blog post en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Titulo del blog post</h1>
-    <p>Aqui se realizara el parrafo</p>
+    <div id="container">
+        <div id="post">
+            <h1>Titulo del blog post principal</h1>
+            <p>Aqui se realizara el parrafo que se ejecutaran en la rama master</p>
+        </div>
+    </div>
+    
 </body>
 </html>
