--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            <h1>cabecera</h1>
+        </div>
         <div id="post">
             <h1>Titulo del blog post principal</h1>
             <p>Aqui se realizara el parrafo que se ejecutaran en la rama master</p>
