Agregado el contenido adicional del blog y mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,8 @@
         <div id="post">
             <h1>Titulo del blog post principal</h1>
             <p>Aqui se realizara el parrafo que se ejecutaran en la rama master</p>
+            <p>Los blogs son la mejor forma de obtener muchas ideas y generar nuevos debates en una investigacion. esto tambien ayuda a que llenes de nuevas cosas que estan sucediendo en la vida</p>
+        
         </div>
     </div>
     
