--- a/blogpost.html
+++ b/blogpost.html
@@ -17,7 +17,7 @@
         <div id="post">
             <h1>Titulo del blog post principal</h1>
             <p>Aqui se realizara el parrafo que se ejecutaran en la rama master</p>
-            <p>Los blogs son la mejor forma de obtener muchas ideas y generar nuevos debates en una investigacion. esto tambien ayuda a que llenes de nuevas cosas que estan sucediendo en la vida</p>
+            <p>Los blogs son lo mejor forma de obtener muchas ideas y generar nuevos debates en una investigacion. esto tambien ayuda a que llenes de nuevas cosas que estan sucediendo en la vida</p>
         
         </div>
         <div id="footer">
